--- a/esp_bib.bib
+++ b/esp_bib.bib
@@ -919,3 +919,56 @@ URL = {https://www.aeaweb.org/articles?id=10.1257/pol.20190299}}
   year={2013},
   publisher={University of Chicago Press Chicago, IL}
 }
+
+@techreport{bachas2022informality,
+  title={Informality, Consumption Taxes, and Redistribution},
+  author={Bachas, Pierre and Gadenne, Lucie and Jensen, Anders},
+  year={2020},
+  institution={National Bureau of Economic Research}
+}
+
+@book{mirrlees2010dimensions,
+  title={Dimensions of tax design: the Mirrlees review},
+  author={Mirrlees, James A and Adam, Stuart},
+  year={2010},
+  publisher={Oxford University Press}
+}
+
+@book{auerbach2013handbook,
+  title={Handbook of public economics},
+  author={Auerbach, Alan J and Chetty, Raj and Feldstein, Martin and Saez, Emmanuel},
+  volume={5},
+  year={2013},
+  publisher={Newnes}
+}
+
+@article{kleven2013taxation,
+  title={Taxation and international migration of superstars: Evidence from the European football market},
+  author={Kleven, Henrik Jacobsen and Landais, Camille and Saez, Emmanuel},
+  journal={American economic review},
+  volume={103},
+  number={5},
+  pages={1892--1924},
+  year={2013}
+}
+
+@article{akcigit2016taxation,
+  title={Taxation and the international mobility of inventors},
+  author={Akcigit, Ufuk and Baslandze, Salom{\'e} and Stantcheva, Stefanie},
+  journal={American Economic Review},
+  volume={106},
+  number={10},
+  pages={2930--81},
+  year={2016}
+}
+
+@article{piketty2011long,
+  title={On the long-run evolution of inheritance: France 1820--2050},
+  author={Piketty, Thomas},
+  journal={The quarterly journal of economics},
+  volume={126},
+  number={3},
+  pages={1071--1131},
+  year={2011},
+  publisher={MIT Press}
+}
